tests/base/parser/bad/stmts_t-match-spid-with-bar-underscore-with.scilla
scilla_version 0

library TestLib

let a = True

contract Test
()

(* wrong arrow, should be => *)
transition arbitrary ()
  match a with
  | _ -> accept
  end
end  
